--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "2chaos",
   "main": "chunk.bat.js",
   "scripts": {
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^29.2.1"
+    "jest": "^29.2.1",
+    "prettier": "^2.7.1"
   }
 }
