--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: 16.x
       - run: yarn --ignore-engines
-      - run: yarn run test:coverage
+      - run: yarn run test --coverage
         env:
           CI: true
           PROGRESS: none
