--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "main": "chunk.bat.js",
   "scripts": {
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "rts": "ts-node",
     "test": "jest",
-    "tsc": "tsc"
+    "tsc": "tsc 1.ts"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "jest": "^29.2.1",
