--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "rts": "ts-node",
     "test": "jest",
-    "tsc": "tsc 1.ts"
+    "tsc": "tsc"
   },
   "dependencies": {
     "ts-node": "^10.9.1"
