--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "esbuild": "^0.15.17",
+    "esbuild-jest": "^0.5.0",
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3"
