--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "jest": "^29.2.1",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3"
+  },
+  "transform": {
+    "^.+\\.tsx?$": "esbuild-jest"
   }
 }
