--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "esbuild": "^0.15.17",
     "esbuild-jest": "^0.5.0",
     "jest": "^29.2.1",
+    "jest-esbuild": "^0.2.9",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3"
   },
